--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ PORT=5000
 NODE_ENV=development
 
 # Frontend URL
-FFRONTEND_URL=http://localhost:5173
+FRONTEND_URL=http://localhost:5173
 
 # API URL (for frontend)
 VITE_API_URL=http://localhost:5000/api
