--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.57.4",
+    "concurrently": "^8.2.2",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "concurrently": "^8.2.2"
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
