--- a/.env.example
+++ b/.env.example
@@ -4,11 +4,14 @@ MONGODB_URI=mongodb://localhost:27017/academic_management
 # JWT Secret (CHANGE THIS IN PRODUCTION!)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-environment
 
-# Email Configuration (Gmail example)
+# Email Configuration (Gmail)
+# For Gmail, you need to use an App Password (not your regular Gmail password)
+# Generate at: https://myaccount.google.com/apppasswords
+# Port 587 for TLS (recommended) or 465 for SSL
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
-EMAIL_USER=caikiet10@gmail.com
-EMAIL_PASS=nqip jcfp xlwz iyme
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-16-character-app-password
 
 # Server Configuration
 PORT=5000
