--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "express-validator": "^7.0.1",
     "helmet": "^7.1.0",
     "html2canvas": "^1.4.1",
+    "isolated-vm": "^6.0.2",
     "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.3",
     "mongoose": "^7.6.3",
